// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Paginator /> should has class 1`] = `
Array [
  <Pagination
    aria-label="pagination"
    listClassName="test"
    listTag="ul"
    tag="nav"
  >
    <PaginationItem
      disabled={true}
      onClick={[Function]}
      tag="li"
    >
      <PaginationLink
        previous={true}
        tag="a"
      />
    </PaginationItem>
    <PaginationItem
      active={true}
      onClick={[Function]}
      tag="li"
    >
      <PaginationLink
        tag="a"
      >
        1
      </PaginationLink>
    </PaginationItem>
    <PaginationItem
      active={false}
      onClick={[Function]}
      tag="li"
    >
      <PaginationLink
        tag="a"
      >
        2
      </PaginationLink>
    </PaginationItem>
    <PaginationItem
      active={false}
      onClick={[Function]}
      tag="li"
    >
      <PaginationLink
        tag="a"
      >
        3
      </PaginationLink>
    </PaginationItem>
    <PaginationItem
      disabled={false}
      onClick={[Function]}
      tag="li"
    >
      <PaginationLink
        next={true}
        tag="a"
      />
    </PaginationItem>
  </Pagination>,
]
`;

exports[`<Paginator /> should render correctly 1`] = `
Array [
  <Pagination
    aria-label="pagination"
    listTag="ul"
    tag="nav"
  >
    <PaginationItem
      disabled={true}
      onClick={[Function]}
      tag="li"
    >
      <PaginationLink
        previous={true}
        tag="a"
      />
    </PaginationItem>
    <PaginationItem
      active={true}
      onClick={[Function]}
      tag="li"
    >
      <PaginationLink
        tag="a"
      >
        1
      </PaginationLink>
    </PaginationItem>
    <PaginationItem
      active={false}
      onClick={[Function]}
      tag="li"
    >
      <PaginationLink
        tag="a"
      >
        2
      </PaginationLink>
    </PaginationItem>
    <PaginationItem
      active={false}
      onClick={[Function]}
      tag="li"
    >
      <PaginationLink
        tag="a"
      >
        3
      </PaginationLink>
    </PaginationItem>
    <PaginationItem
      disabled={false}
      onClick={[Function]}
      tag="li"
    >
      <PaginationLink
        next={true}
        tag="a"
      />
    </PaginationItem>
  </Pagination>,
]
`;

exports[`<Paginator /> should renders 1`] = `
Array [
  <Pagination
    aria-label="pagination"
    listTag="ul"
    tag="nav"
  >
    <PaginationItem
      disabled={true}
      onClick={[Function]}
      tag="li"
    >
      <PaginationLink
        previous={true}
        tag="a"
      />
    </PaginationItem>
    <PaginationItem
      active={true}
      onClick={[Function]}
      tag="li"
    >
      <PaginationLink
        tag="a"
      >
        1
      </PaginationLink>
    </PaginationItem>
    <PaginationItem
      active={false}
      onClick={[Function]}
      tag="li"
    >
      <PaginationLink
        tag="a"
      >
        2
      </PaginationLink>
    </PaginationItem>
    <PaginationItem
      active={false}
      onClick={[Function]}
      tag="li"
    >
      <PaginationLink
        tag="a"
      >
        3
      </PaginationLink>
    </PaginationItem>
    <PaginationItem
      disabled={false}
      onClick={[Function]}
      tag="li"
    >
      <PaginationLink
        next={true}
        tag="a"
      />
    </PaginationItem>
  </Pagination>,
]
`;
